minor header alignment fixes. styles for active menu item

--- a/style.css
+++ b/style.css
@@ -502,16 +502,16 @@ textarea {
 .header-nav-wrapper .logo {
     display: inline-block;
     min-width: 340px;
-    padding: 30px;
+    padding: 34px 50px;
     text-align: center;
-    border-bottom: solid 5px #e91e63;
+    border-bottom: solid 3px #e91e63;
     background-color: #232731
 }
 
 .header-nav-wrapper .logo a {
     color: #fff;
-    font-size: 40px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 500;
     letter-spacing: 3px;
 }
 .header-nav-wrapper .logo a:focus {
@@ -526,7 +526,7 @@ textarea {
 
 .header-nav-wrapper nav {
     display: inline-block;
-    margin-right: 60px;
+    margin-right: 30px;
     padding: 34px 0 33px
 }
 
@@ -555,7 +555,8 @@ textarea {
     color: #232731
 }
 
-.header-nav-wrapper nav ul li a:hover {
+.header-nav-wrapper nav ul li a:hover,
+.header-nav-wrapper nav ul li.active a {
     color: #e91e63
 }
 
@@ -587,7 +588,7 @@ textarea {
 
 .secondary-nav-wrapper {
     display: inline-block;
-    padding: 35px 30px;
+    padding: 31px 30px 32px 30px;
     background-color: #232731
 }
 
@@ -645,7 +646,7 @@ textarea {
 }
 
 .secondary-nav-wrapper ul.secondary-nav li.search a {
-    font-size: 16px;
+    font-size: 17px;
     color: #fff
 }
 
@@ -663,7 +664,7 @@ textarea {
     right: 0;
     visibility: hidden;
     width: 50%;
-    padding: 40px 30px;
+    padding: 37px 30px;
     -webkit-transition: all 300ms;
     transition: all 300ms;
     opacity: 0;
@@ -773,7 +774,8 @@ textarea {
     visibility: hidden;
     width: 25px;
     height: 26px;
-    padding: 52px;
+    padding: 50px;
+    padding-bottom: 51px;
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
     background-color: #232731
